k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: facedeep
  labels:
    app.kubernetes.io/name: facedeep
